# avocado-price-forecast

./: README.md  forecast.py  pyproject.toml
src/: 01_🏠_Home.py
src/pages/: 02_🕵️_Exploration.py  03_ 	🔮_Forecast.py
src/scripts/: prepare.py
