[tool.poetry]
name = "avocado-price-forecast"
version = "0.1.0"
description = "A project to explore Facebook Prophet and time-series forecasting using the avocado dataset."
authors = ["Stephen Reisdorf <stephenreisdorf@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<4.0"
prophet = "^1.1.1"
ipykernel = "^6.19.2"
plotly = "^5.11.0"
nbformat = "^5.7.0"
streamlit = "^1.16.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
